
-------------------------------------------

 List of changes for all supported software

 -------------------------------------------

3/12/18
- adding prototype for system qt in Linux distributions.
- reversing order of cadmesh / scons so include files can be found
- adding local version of mlibrary to release

3/11/18
- silencing untar with options instead of redirection
- using git release mechanism for scons_bm
- can use system qt if necessary
- fixed ncpu command
- updated announcement, untar command, instructions for devel and 2.2
- added templated installation instructions so we do not need to keep different versions of all
- fix go_tar / go_reload with proper paths, adding local option to go_tar
- mlibrary going to git releases for devel as well
- mlibrary release 1.3 instead of 1.2 as git did not include "include" in 1.2

3/9/18
 - portable command to get number of cpus
 - cadmesh release made part of mlibrary (but it will still git-get the submodules assimp and tetgen)
 - using git release mechanism for mlibrary and banks

3/7/18
 - starting release of 2.2

11/17/17
 - added ROOT includes

11/7/17
 - added gmedia in xcode headers

11/2/17
 - added gdata in xcode headers

10/31/17
 - added ghit in xcode headers

10/5/17
 - fixed uncommented comment
 - added CLANG cmake options for Darwin for geant4 and cmake

3/24/17
- added mt option for installation
- added clhep and geant4 in xcode settings

1/26/17
- introducing two python functions to streamline and standardize the versioning and user customization options

11/9/16
- limiting max parallel compilation to 24
  just in case there are local limits (for example, some JLab nodes)

7/22/16
- removed obsolete go_scrat
- finalized go_mlibrary
- added mlibrary in go_tar

5/12/16
- fixed BANKS envs

4/8/16
 - go_geant4 fixes
 - JLAB_ROOT not necessary when using keepmine

4/6/15
 - fixed deleting directories in go_geant4

4/5/16
 - added warnings for xercesc and qt

4/1/16
 - fixed overwriting of the env
