@@ -53,7 +53,7 @@
         <h3> MAC OS specific requirements</h3>
 		Make sure you have the latest xcode tools with:
 		<pre>
-	xcode-select --install
+ xcode-select --install
 		</pre>
 
         You can install the dependencies with <a href="http://brew.sh"> homebrew</a>:<br/><br/>
@@ -68,9 +68,11 @@
                     <li>brew install cmake</li>
 					<li>brew install mysql</li>
 					<li>brew install openssl</li>
+					It is much better to use the system version of qt):
+					<li>brew install qt</li>
                     <br><br>* if you are on High Sierra, brew will install scons3. Not good. Go to http://scons.org/pages/download.html instead and use
                     <pre>
-                        python setup.py install
+ python setup.py install
                     </pre>
                     inside the untarred 2.5.1 dir.
                     <br><br>You can upgrade a package by using "upgrade" instead of "install"
@@ -148,11 +150,11 @@
     
     <ol>
         <li>
-            Choose a place (JLAB_ROOT) to install the software<br>
+            Choose a place (JLAB_ROOT) to install the software<br><br>
 				A good choice for <b>JLAB_ROOT</b> is <b> /opt/jlab_software</b>:<br><br>
 
 				<pre>
-                set JLAB_ROOT=/opt/jlab_software
+ set JLAB_ROOT=/opt/jlab_software
 				</pre>
 
 
@@ -160,7 +162,7 @@
             Create the working directory:
             
             <pre>
-                mkdir -p $JLAB_ROOT/2.2
+mkdir -p $JLAB_ROOT/2.2
             </pre>
             
             
@@ -170,9 +172,9 @@
         
         <li>Get the installation scripts:
             <pre>
-                cd $JLAB_ROOT
-                wget http://www.jlab.org/12gev_phys/packages/sources/ceInstall/ceInstall_2.2.tar.gz
-				tar -zxpf ceInstall_2.2.tar.gz --strip-components 1 -C 2.2
+ cd $JLAB_ROOT
+ wget http://www.jlab.org/12gev_phys/packages/sources/ceInstall/ceInstall_2.2.tar.gz
+ tar -zxpf ceInstall_2.2.tar.gz --strip-components 1 -C 2.2
             </pre>
             
         </li>
@@ -182,8 +184,8 @@
             Set the environment variables. You should put these lines in your login script:
             
             <pre>
-                setenv JLAB_ROOT /opt/jlab_software
-                source $JLAB_ROOT/2.2/ce/jlab.csh
+ setenv JLAB_ROOT /opt/jlab_software
+ source $JLAB_ROOT/2.2/ce/jlab.csh
             </pre>
             
         </li>
@@ -217,29 +219,35 @@
         Notice: if you already have some existing environment variables that you want to keep,
         use the option "keepmine":<br>
         <pre>
-            source $JLAB_ROOT/2.2/ce/jlab.csh keepmine
+ source $JLAB_ROOT/2.2/ce/jlab.csh keepmine
         </pre>
         
         
         <li>
             Choose the packages you wish to install by executing the corresponding script:
             <pre>
-                cd $JLAB_ROOT/2.2/install
-                
-                ./go_clhep
-                ./go_xercesc
-                ./go_qt
-                ./go_geant4
-                ./go_sconsscript
-                ./go_evio
-                ./go_mysql
-                ./go_ccdb
-                ./go_mlibrary
-                ./go_gemc
-                ./go_fields
-                ./go_root
-                ./go_banks
-                ./go_jana
+ cd $JLAB_ROOT/2.2/install
+
+ ./go_clhep
+ ./go_xercesc
+
+ If you have a system installation of qt (see instructions on requirements on how to install it):
+ ./go_qt system
+
+ Otherwise the following command will downlowad the qt installer for you. Follow instructions for the installation:
+ ./go_qt
+
+ ./go_geant4
+ ./go_sconsscript
+ ./go_evio
+ ./go_mysql
+ ./go_ccdb
+ ./go_mlibrary
+ ./go_gemc
+ ./go_fields
+ ./go_root
+ ./go_banks
+ ./go_jana
             </pre>
             
             All the packages listed above "go_gemc" are necessary to run gemc.
