@@ -19,6 +19,7 @@ TO RELEASE:
 - adding prototype for system qt in Linux distributions.
 - reversing order of cadmesh / scons so include files can be found
 - adding local version of mlibrary to release
+- updated instructions
 
 3/11/18
 - silencing untar with options instead of redirection
